# arcade-game-template

./: LICENSE  README.md  cookiecutter-template-brief.md  cookiecutter.json
.claude/: settings.local.json
{{cookiecutter.project_slug}}/: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  build.py  game_config.toml  main.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  game.py  game_config.py  game_event.py  state.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/levels/: base_level.py  level_factory.py  placeholder_level.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/sprites/: player_ship.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/ui/: hud.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/views/: game_over.py  level_complete.py  main_menu.py  player_killed.py  run_level.py  score_entry.py  splash.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_smoke.py
